[package]
name = "simple-tiled-wfc"
version = "0.7.7"
authors = ["Vitaly Samotokin <madware.ru@gmail.com>"]
description = "A simple library which lets a user to use a tiled Wave Function Collapse algorithm implementation"
edition = "2018"
license = "MIT"
categories = ["algorithms", "game-development"]
repository = "https://github.com/madwareru/simple-tiled-wfc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitsetium = "0.0.0"
rand = "0.7"
macroquad = "0.3.8"
serde = { version = "1.0", features = ["derive"] }
ron = "0.6.4"
image = "0.23.14"